IGNITE-28802 Fix JmhSqlDmlBenchmark for JDK 17